[tool.poetry]
name = "cdv"
version = "0.1.0"
description = "Provides various dev tools for Chia"
authors = ["wallentx <william.allentx@gmail.com>"]
readme = "README.md"
packages = [{include = "cdv"}]

[tool.poetry.dependencies]
python = "^3.10"
chia-blockchain = {path = "../.."}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
types-aiofiles = "^22.1.0.6"
types-click = "^7.1.8"
types-cryptography = "^3.3.23.2"
types-pkg-resources = "^0.1.3"
types-PyYAML = "^6.0.12.3"
types-setuptools = "^65.7.0.3"
black = "21.12b0"
isort = "^5.11.4"
pre-commit = "^3.0.0"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cdv = "cdv.cmds.cli:main"
